--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
-      <a href="net-art.html">
+      <a href="diyps-aliens.html">
         <img src="images/p5js/ojmc2213250.jpg" class="img-fluid mx-auto d-block" alt="diyps Aliens">
       </a>
     </div>
     <div class="col-sm-5">
-      <a href="p5js-self-portrait.html">
+      <a href="game-dog-playtime.html">
         <img src="images/p5js/game-dog-playtime.jpg" class="img-fluid mx-auto d-block" alt="Game - Dog Playtime">
       </a>
     </div>
