--- a/treasure_haunt/index.html
+++ b/treasure_haunt/index.html
@@ -6,7 +6,7 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script language="javascript" type="text/javascript" src="ghost_treasures.js"></script>
+  <script language="javascript" type="text/javascript" src="treasure_haunt.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <style>
