--- a/treasure-haunt.html
+++ b/treasure-haunt.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <style>
-    a {color: SteelBlue}
+    a {color: LightSteelBlue}
   </style>
 </head>
 <body>
@@ -43,14 +43,13 @@
 
   <hr>
   <p class="stmt">
-  For my Art 74 final project, I created a game called Treasure Haunt using p5.js code. The objective of this game is to move between rooms to collect certain treasures. You can move the ghost character using the arrow keys or the W, A, S, D keys. As the levels progress, there are more spiders to avoid. After running into a spider three times during a level, you'll have to try the level again. I created this game so that players can move between rooms because I like the idea of players having the freedom to explore the game's world.
+  For my Art 74 final project, I created a game called Treasure Haunt using p5.js code. The objective of this game is to move between rooms to collect certain treasures. You can move the ghost character using the arrow keys or the W, A, S, D keys. As the levels progress, there are more spiders to avoid. After running into a spider three times during a level, you'll have to try the level again. I created this game so that players can move between rooms because I wanted to give players the freedom to explore the game's world.
   </p>
   <hr>
 
   <center>
   <iframe src="treasure_haunt/index.html" height="690" width="910" title="Game - Dog Playtime"></iframe>
   
-  <br>
   <br>
 
   <p>p5.js Code:</p>  
