Update Treasure Haunt

--- a/treasure-haunt.html
+++ b/treasure-haunt.html
@@ -43,12 +43,12 @@
 
   <hr>
   <p class="stmt">
-  For my Art 74 final project, I created a game called Treasure Haunt using p5.js code. The objective of this game is to move between rooms to collect certain treasures. You can move the ghost character using the arrow keys or the W, A, S, D keys. As the levels progress, there are more spiders to avoid. After running into a spider three times during a level, you'll have to try the level again. I created this game so that players can move between rooms because I wanted to give players the freedom to explore the game's world.
+  This is a game I created for my Art 74 (Digital Media Art) final project. The game is called Treasure Haunt and it was made using p5.js code. The objective in the game is to move between rooms to collect certain treasures. You can move the ghost character using the W, A, S, D keys. As the levels progress, there are more spiders to avoid. After running into a spider three times during a level, you'll have to try the level again. I created this game so that players can move between rooms because I wanted to give players the freedom to explore the game's world.
   </p>
   <hr>
 
   <center>
-  <iframe src="treasure_haunt/index.html" height="690" width="910" title="Game - Dog Playtime"></iframe>
+  <iframe src="treasure_haunt/index.html" height="690" width="910" title="Treasure Haunt"></iframe>
   
   <br>
 
