--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
          <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
-         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Dog Playtime</a></li>
+         <li><a class="dropdown-item" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
    </ul> 
