--- a/3d-print.html
+++ b/3d-print.html
@@ -15,7 +15,11 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
@@ -27,23 +31,24 @@
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
          <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
-         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Dog Playtime</a></li>
+         <li><a class="dropdown-item" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
-  </ul> 
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">3D Print</h1>
+  <h1 class="text-center">Iron Man 3D Print</h1>
 
   <hr>
   <p class="stmt">
   The objective of this project was to export the Minecraft Sculpture as an STL file and prepare it for a 3D print. The softwares used were Mineways to create the STL file and FlashPrint to prepare the print with scaffolding. A small draft print was done first to determine how the sculpture should be rebuilt if needed. Then, a final print was done much larger to show the details. 
   </p>
   <p class="stmt">
-  My final print of the Ironman helmet took alomst 7 hours to print and it came out to be 3 inches tall. I finished my sculpture by filing down the rough edges, coating it with a clear primer spray paint, and painting it with acrylic paint.
+  My final print of the Iron Man helmet took alomst 7 hours to print and it came out to be 3 inches tall. I finished my sculpture by filing down the rough edges, coating it with a clear primer spray paint, and painting it with acrylic paint.
   </p>
 
   <hr>
