--- a/game-dog-playtime.html
+++ b/game-dog-playtime.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Game - Dog Playtime | Olivia Joy</title>
+<title>Dog Playtime | Olivia Joy</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,7 +15,11 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
@@ -27,20 +31,21 @@
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
          <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
-         <li><a class="dropdown-item active" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item active" href="game-dog-playtime.html">Dog Playtime</a></li>
+         <li><a class="dropdown-item" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
-  </ul> 
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">Game - Dog Playtime</h1>
+  <h1 class="text-center">Dog Playtime</h1>
 
   <hr>
   <p class="stmt">
-  This is a game where you can use different items to play with the dog. It's intended to be played for fun without a way to "win" or "lose" but to make the game more interesting, there is a small challenge in finding which items the dog will play with in each level. There's 5 items you can choose from in the selection bar. You can also restart anytime by clicking the restart button.
+  This is a game where you can use different items to play with the dog. It's intended to be played for fun without a way to "win" or "lose", but to make the game more interesting, there is a small challenge in finding which items the dog will play with in each level. There's 5 items you can choose from in the selection bar. You can also restart anytime by clicking the restart button.
   </p>
   <hr>
 
