--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -16,7 +16,11 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link active" href="meme-mashup.html">Meme</a></li>
@@ -28,11 +32,12 @@
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
          <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
-         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Dog Playtime</a></li>
+         <li><a class="dropdown-item" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
-  </ul> 
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
@@ -57,7 +62,7 @@
     <div class="col-sm-8">
       <img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
     </div>
-    <div class="col-sm-4"><p>A version of the above mashup without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo is in his element.</p>
+    <div class="col-sm-4"><p>This is a version of the above mashup without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo is in his element.</p>
     </div>
   </div>
 
