--- a/net-art.html
+++ b/net-art.html
@@ -15,7 +15,11 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
@@ -27,20 +31,21 @@
        <ul class="dropdown-menu">
          <li><a class="dropdown-item" href="p5js-self-portrait.html">Self-Portrait</a></li>
          <li><a class="dropdown-item" href="diyps-aliens.html">DIY PS - Aliens</a></li>
-         <li><a class="dropdown-item" href="game-dog-playtime.html">Game - Dog</a></li>
-         <li><a class="dropdown-item" href="game-ghost.html">Game - Ghost</a></li>
+         <li><a class="dropdown-item" href="game-dog-playtime.html">Dog Playtime</a></li>
+         <li><a class="dropdown-item" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
-  </ul> 
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">Net.art</h1>
+  <h1 class="text-center">Nature Adventure Net.art</h1>
 
   <hr>
   <p class="stmt">
-  The objective of this project was to create a series of pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way. My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
+  The objective of this project was to create a series of HTML pages with links, text, and images to tell a story or experience in a poetic, modern, hypertext way. My website is a fun little experience with nature. It shows that different paths can led you to different parts of nature, where there will be various things to see. The idea is that you can choose to look around and explore your surroundings wherever you are in nature to see what it has to offer.
   </p>
 
   <p class="stmt">
