Update page layouts

--- a/3d-print.html
+++ b/3d-print.html
@@ -53,7 +53,7 @@
 
   <hr>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/3d/3d-ironman-helmet.png" class="img-fluid" alt="3D printed sculpture of Ironman's helmet">
@@ -64,7 +64,7 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/3d/3d-ironman-helmet-leftside.png" class="img-fluid" alt="3D printed sculpture of Ironman's helmet, left side angle">
@@ -75,7 +75,7 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/3d/ironman-stl-right-angle.png" class="img-fluid" alt="STL image of the Ironman sculpture, right side angle">
