--- a/glitch-art.html
+++ b/glitch-art.html
@@ -41,7 +41,7 @@
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">Glitch Art</h1>
+  <h1 class="text-center">Fast Food Glitch Art</h1>
 
   <hr>
   <p class="stmt">
@@ -53,7 +53,7 @@
   </p>
   <hr>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/glitch/mcdonalds-glitch-food.png" class="img-fluid" alt="McDonald's food as a glitched image">
@@ -64,7 +64,7 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
      <img src="images/glitch/carlsjr-glitch-food.png" class="img-fluid" alt="Carl's Jr food as a glitched image">
@@ -75,7 +75,7 @@
     <div class="col-sm-1"></div>
   </div>
  
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
      <img src="images/glitch/mcdonalds-reverb.png" class="img-fluid" alt="McDonalds food as a glitched image, made with reverb effect in Audacity">
@@ -86,13 +86,12 @@
     <div class="col-sm-1"></div>
   </div>
  
-  <div class="row pb-4">
-    <div class="col-sm-1"></div>
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm"></div>
     <div class="col-sm-5">
      <img src="images/glitch/mcdonalds-glitch-exterior.png" class="img-fluid" alt="McDonalds exterior as a glitched image">
     </div>
-    <div class="col-sm-5"></div>
-    <div class="col-sm-1"></div>
+    <div class="col-sm"></div>
   </div>
 
 </div>
