--- a/minecraft-sculpture.html
+++ b/minecraft-sculpture.html
@@ -55,7 +55,7 @@
   I created a sculpture of the Iron Man helmet because it represents Marvel, which I am a big fan of. It is culturally significant because many people around the world have grown up watching the Marvel movies and/or reading the comic books. Marvel has been a big influence in pop culture, and it continues to be today as they release new movies and shows.
   </p>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/minecraft/ironman-helmet-mc.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet">
@@ -66,7 +66,7 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/minecraft/ironman-right-angle.png" class="img-fluid" alt="Minecraft sculpture of Ironman's helmet, right side angle">
@@ -85,7 +85,7 @@
   I built this sculpture of Baby Groot from Guardians of the Galaxy Vol. 2 because it was another way to represent Marvel. Moveover, the cultural significance of Baby Groot is about how his adorablness from the movie captured many people's attention.
   </p>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/minecraft/baby-groot-sculpture.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot">
@@ -96,7 +96,7 @@
     <div class="col-sm-1"></div>
   </div>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/minecraft/baby-groot-right-angle.png" class="img-fluid" alt="Minecraft sculpture of Baby Groot, right side angle">
