--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
   </p>
 
   <div class="row pb-4 align-items-center">
+    <div class="col-sm"></div>
+    <div class="col-sm-5">
+     <img src="images/p5js/treasure-haunt-title.png" class="img-fluid" alt="Treasure Haunt title screen">
+    </div>
+    <div class="col-sm"></div>
+  </div>
+
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <a href="diyps-aliens.html">
