--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -42,7 +42,7 @@
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
 
-  <h1 class="text-center">Meme Mashup</h1>
+  <h1 class="text-center">Meme Mashups</h1>
 
   <hr>
   <p class="stmt">
@@ -58,6 +58,8 @@
     </div>
   </div>
 
+  <hr>
+
   <div class="row pb-3">
     <div class="col-sm-8">
       <img src="images/meme/meme-mashup1-2.png" class="img-fluid mx-auto d-block" alt="Mashup image of the disaster girl, woman squinting, tired spongebob, and Elmo rise memes">
@@ -65,6 +67,8 @@
     <div class="col-sm-4"><p>This is a version of the above mashup without the evil Kermit meme. Both Spongebob and the woman escape the fire. The woman wonders if the child is responsible for the fire. Rising Elmo is in his element.</p>
     </div>
   </div>
+
+  <hr>
 
   <div class="row pb-3">
     <div class="col-sm-8">
