--- a/net-art.html
+++ b/net-art.html
@@ -54,7 +54,7 @@
   </p>
   <hr>
 
-  <div class="row pb-4">
+  <div class="row pb-4 align-items-center">
     <div class="col-sm-1"></div>
     <div class="col-sm-5">
       <img src="images/net-art/begin-your-adventure.png" class="img-fluid" alt="The first page of Olivia's Net art website. The page title is Begin Your Nature Adventure">
