Update meme page layout

--- a/meme-mashup.html
+++ b/meme-mashup.html
@@ -78,6 +78,61 @@
     </div>
   </div>
 
+  <br>
+  <hr>
+
+  <p class="stmt">Base memes</p>
+  
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm-1"></div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/disaster-girl">
+      <img src="images/meme/base-memes/disaster-girl.png" class="img-fluid mx-auto d-block" alt="disaster girl">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/evil-kermit">
+      <img src="images/meme/base-memes/evil-kermit.png" class="img-fluid mx-auto d-block" alt="evil kermit">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/squinting-woman">
+      <img src="images/meme/base-memes/woman-squinting.png" class="img-fluid mx-auto d-block" alt="woman squinting">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/tired-spongebob">
+      <img src="images/meme/base-memes/spongebob-tired.png" class="img-fluid mx-auto d-block" alt="tired spongebob">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
+  <div class="row pb-4 align-items-center">
+    <div class="col-sm-1"></div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/elmo-rise">
+      <img src="images/meme/base-memes/elmo-rise.png" class="img-fluid mx-auto d-block" alt="elmo rise">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/steven-crowders-change-my-mind-campus-sign">
+      <img src="images/meme/base-memes/change-mind.png" class="img-fluid mx-auto d-block" alt="change my mind">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/surprised-pikachu">
+      <img src="images/meme/base-memes/surprised-pikachu.png" class="img-fluid mx-auto d-block" alt="surprised pikachu">
+      </a>
+    </div>
+    <div class="col-sm">
+      <a href="https://knowyourmeme.com/memes/surprised-pikachu">
+      <img src="images/meme/base-memes/yelling-at-cat.png" class="img-fluid mx-auto d-block" alt="woman yelling at cat">
+      </a>
+    </div>
+    <div class="col-sm-1"></div>
+  </div>
+
 </div>
 
 </body>
