--- a/treasure-haunt.html
+++ b/treasure-haunt.html
@@ -18,7 +18,11 @@
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center sticky-top">
-  <ul class="navbar-nav">
+ <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+ </button>
+ <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+   <ul class="navbar-nav">
      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
      <li class="nav-item"><a class="nav-link" href="glitch-art.html">Glitch</a></li>
      <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
@@ -34,7 +38,8 @@
          <li><a class="dropdown-item active" href="treasure-haunt.html">Treasure Haunt</a></li>
        </ul>
      </li>
-  </ul> 
+   </ul> 
+ </div>
 </nav>
 
 <div class="container-fluid pt-3 pb-3 bg-74 text-light">
