--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   <div class="row pb-4 align-items-center">
     <div class="col-sm"></div>
     <div class="col-sm-5">
+     <a href="treasure-haunt.html">
      <img src="images/p5js/treasure-haunt-title.png" class="img-fluid" alt="Treasure Haunt title screen">
+     </a>
     </div>
     <div class="col-sm"></div>
   </div>
