--- a/treasure-haunt.html
+++ b/treasure-haunt.html
@@ -48,7 +48,9 @@
 
   <hr>
   <p class="stmt">
-  This is a game I created for my Art 74 (Digital Media Art) final project. The game is called Treasure Haunt and it was made using p5.js code. The objective in the game is to move between rooms to collect certain treasures. You can move the ghost character using the W, A, S, D keys. As the levels progress, there are more spiders to avoid. After running into a spider three times during a level, you'll have to try the level again. I created this game so that the ghost can move between rooms because I wanted to give players the freedom to explore.
+  This is a game I created using p5.js code for my Art 74 (Digital Media Art) final project.</p>
+  <p class="stmt">The objective of the game is to collect certain treasures throughout the house. Use the W, A, S, D keys to control the ghost character and move between rooms by heading toward the green squares. There are 5 levels. As the the levels progress, there are more items to collect and spiders to avoid. After running into a spider three times during a level, you'll have to try again. </p>
+  <p class="stmt">I created this game in the way that the ghost can move between rooms because I wanted to give players the freedom to explore.</p>
   </p>
   <hr>
 
